--- a/siaxleebi3.html
+++ b/siaxleebi3.html
@@ -16,7 +16,10 @@
                 <li><a href="#">სიახლეები</a></li>
                 <li><a href="#">ფილიალები</a></li>
                 <li><a href="#">გათამაშებები</a></li>
-            </ul> 
+            </ul>
+            <!-- <p>
+                Lorem ipsum dolor sit amet consectetur.
+            </p>  -->
         </nav>
     </header>
     <main>
